Last years meeting info

--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
 layout: about
 title: Index
 ---
-Test
+More details about the venue and program are coming soon! Last year's meeting: <a href="http://gpss.cc/deepp16">http://gpss.cc/deepp16/</a>.
